--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         <section>
           <div class="icons_wrapper">
-            <div class="icon"><img src="assets/build_muscle.svg" /></div>
+            <div class="icon"><img loading=lazy src="assets/build_muscle.svg" alt="build_muscle" /></div>
             <div class="description_wrapper">
               <div class="icon_title">Build muscle</div>
               <div class="icon_description">
@@ -133,7 +133,7 @@
             </div>
           </div>
           <div class="icons_wrapper">
-            <div class="icon"><img src="assets/joints_icon.svg" /></div>
+            <div class="icon"><img loading=lazy src="assets/joints_icon.svg" alt="joints_icon" /></div>
             <div class="description_wrapper">
               <div class="icon_title">Strengthen the joints</div>
               <div class="icon_description">
@@ -143,7 +143,7 @@
             </div>
           </div>
           <div class="icons_wrapper">
-            <div class="icon"><img src="assets/loseweight_icon.svg" /></div>
+            <div class="icon"><img loading=lazy src="assets/loseweight_icon.svg" alt ="loseweight_icon"/></div>
             <div class="description_wrapper">
               <div class="icon_title">Lose wheight</div>
               <div class="icon_description">
@@ -153,7 +153,7 @@
             </div>
           </div>
           <div class="icons_wrapper">
-            <div class="icon"><img src="assets/balance_icon.svg" /></div>
+            <div class="icon"><img loading=lazy src="assets/balance_icon.svg" alt="balance_icon"/></div>
             <div class="description_wrapper">
               <div class="icon_title">Improve balance and coordination</div>
               <div class="icon_description">
@@ -276,7 +276,7 @@
       <article id="faq">
         <section id="faq_icons">
           <div class="icons_wrapper">
-            <div class="icon"><img src="assets/shipping_icon.svg" /></div>
+            <div class="icon"><img loading=lazy src="assets/shipping_icon.svg" alt="shipping_icon"/></div>
             <div class="description_wrapper">
               <div class="icon_title">World wide Shipping</div>
               <div class="icon_description">
@@ -285,7 +285,7 @@
             </div>
           </div>
           <div class="icons_wrapper">
-            <div class="icon"><img src="assets/satisfaction_icon.svg" /></div>
+            <div class="icon"><img loading=lazy src="assets/satisfaction_icon.svg" alt="satisfaction_icon" /></div>
             <div class="description_wrapper">
               <div class="icon_title">30-Day Satisfaction Guarantee</div>
               <div class="icon_description">
@@ -295,7 +295,7 @@
             </div>
           </div>
           <div class="icons_wrapper">
-            <div class="icon"><img src="assets/asseble_icon.svg" /></div>
+            <div class="icon"><img loading=lazy src="assets/asseble_icon.svg" alt="asseble_icon"/></div>
             <div class="description_wrapper">
               <div class="icon_title">EASY TO ASSEMBLE</div>
               <div class="icon_description">
@@ -322,7 +322,7 @@
         <h2>Hear from our costumers</h2>
         <div id="review_wrapper">
           <section class="review">
-            <div class="stars"><img src="assets/4_stars.svg" /></div>
+            <div class="stars"><img loading=lazy src="assets/4_stars.svg" alt="Rating stars" /></div>
             <div class="review_title">I feel more energetic</div>
             <div class="review_text">
               I started using Me-Mover a few months ago, and I'm more motivated
@@ -331,7 +331,7 @@
             <div class="review_name">ANNA L.</div>
           </section>
           <section class="review">
-            <div class="stars"><img src="assets/5_stars.svg" /></div>
+            <div class="stars"><img loading=lazy src="assets/5_stars.svg" alt="Rating stars" /></div>
             <div class="review_title">I can finally train outdoors</div>
             <div class="review_text">
               I had a back injury and couldn't run or bike without pain. Walking
@@ -341,7 +341,7 @@
             <div class="review_name">JULIAN S.</div>
           </section>
           <section class="review">
-            <div class="stars"><img src="assets/4_stars.svg" /></div>
+            <div class="stars"><img loading=lazy src="assets/4_stars.svg" alt="Rating stars" /></div>
             <div class="review_title">
               Never touched the treadmill ever since
             </div>
