--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </p>
           <p>Me-Mover also helps build muscle and strengthen joints.</p>
         </section>
-        <img loading=lazy src="assets/memoverfeet.png" alt="memoverfeet" />
+        <img loading=lazy src="assets/memoverfeet.webp" alt="memoverfeet" />
       </article>
       <article class="memover_benefits2">
         <section>
@@ -85,7 +85,7 @@
             be shared to make it even more interesting.
           </p>
         </section>
-        <img loading=lazy src="assets/twomenonmemover.png" alt="twomenonmemover" />
+        <img loading=lazy src="assets/twomenonmemover.webp" alt="twomenonmemover" />
       </article>
       <article class="memover_benefits">
         <section>
@@ -101,7 +101,7 @@
             - The best way to improve your balance, stability and coordination.
           </p>
         </section>
-        <img loading=lazy src="assets/womanonmemover.png" alt="womanonmemover" />
+        <img loading=lazy src="assets/womanonmemover.webp" alt="womanonmemover" />
       </article>
       <article id="why_memover">
         <section>
@@ -249,7 +249,7 @@
         </section>
       </article>
       <article id="stories">
-        <img loading=lazy src="assets/woman.png" alt="woman" />
+        <img loading=lazy src="assets/woman.webp" alt="woman" />
         <section>
           <h3>Success stories</h3>
           <p>
