--- a/index.html
+++ b/index.html
@@ -169,27 +169,27 @@
         <h5>Try Me-Mover</h5>
         <h6>Fill out this form if you want to try a Me-over and we will contact you later.</h6>
         <form name="Me-Mover-form" method="POST" data-netify="true">
-        <p>
+        <div>
           <label for="input__text">Name *</label>
           <input id="input__text" type="text" required placeholder="Enter your first and last name"/>
-        </p>
-        <p>
+        </div>
+        <div>
           <label for="input__emailaddress">Email Address *</label>
           <input
             id="input__emailaddress"
             type="email" required
             placeholder="Enter your email (e.g. abcd@efg.com)"
           />
-        </p>
-        <p>
+        </div>
+        <div>
           <label for="input__phone">Phone Number</label>
           <input
             id="input__phone"
             type="tel" 
             placeholder="Enter your phone number (e.g. 42424242)"
           />
-        </p>
-          <p>
+        </div>
+          <div>
             <label for="select-hotspot">Hotspot *</label>
             <select id="select">
               <optgroup label="Option Group">
@@ -198,8 +198,8 @@
                 <option>Odense</option>
               </optgroup>
             </select>
-          </p>
-          <p>
+          </div>
+          <div>
             <label for="select-number">Number of Me-Movers *</label>
             <select id="select">
               <optgroup label="Option Group">
@@ -210,16 +210,16 @@
                 <option>5</option>
               </optgroup>
             </select>
-          </p>
-          <p>
+          </div>
+          <div>
             <label for="idd">Date *</label>
             <input type="date" required id="idd" value="2021-01-03" />
-          </p>
-          <p>
+          </div>
+          <div>
             <label for="idd">Time *</label>
             <input type="time" required id="idd" value="00:00" />
-          </p>
-          <p>
+          </div>
+          <div>
           <label for="textarea">ADDITIONAL INFORMATION</label>
             <textarea
               id="textarea"
@@ -227,7 +227,7 @@
               cols="42"
               placeholder="Enter to comment additional information on special needs or anything you want to share with us."
             ></textarea>
-          </p>
+          </div>
         </section>
       </article>
           <div class="inputfeild">
