--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div id="main_buttons">
             <div class="btn_container">
               <a href="https://www.youtube.com/watch?v=9K3SB--FX4A"
-                ><button id="watch_video">Watch video</button></a
+              target="_blank"><button id="watch_video">Watch video</button></a
               >
             </div>
             <div class="btn_container">
@@ -243,7 +243,7 @@
       <article id="shop_bg">
         <section>
           <a href="https://me-mover.dk/product-category/shop/"
-            ><button id="shop_btn">Shop</button></a
+          target="_blank"><button id="shop_btn">Shop</button></a
           >
         </section>
       </article>
