typo on netlify

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <section id="form-fill">
         <h5>Try Me-Mover</h5>
         <h6>Fill out this form if you want to try a Me-over and we will contact you later.</h6>
-        <form name="Me-Mover-form" method="POST" data-netify="true">
+        <form name="Me-Mover-form" method="POST" data-netlify="true">
         <div>
           <label for="input__text">Name *</label>
           <input id="input__text" type="text" required placeholder="Enter your first and last name"/>
