maybe it works now?

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
           </p>
           <div id="main_buttons">
             <div class="btn_container">
-              <a href="https://www.youtube.com/watch?v=9K3SB--FX4A"
-              target="_blank"><button id="watch_video">Watch video</button></a
+              <a
+                href="https://www.youtube.com/watch?v=9K3SB--FX4A"
+                target="_blank"
+                ><button id="watch_video">Watch video</button></a
               >
             </div>
             <div class="btn_container">
@@ -166,84 +168,90 @@
 
       <article id="form">
         <section id="form-fill">
-        <h5>Try Me-Mover</h5>
-        <h6>Fill out this form if you want to try a Me-over and we will contact you later.</h6>
-        <form name="Me-Mover-form" method="POST" data-netlify="true">
-        <div>
-          <label for="input__text">Name *</label>
-          <input id="input__text" type="text" required placeholder="Enter your first and last name"/>
-        </div>
-        <div>
-          <label for="input__emailaddress">Email Address *</label>
-          <input
-            id="input__emailaddress"
-            type="email" required
-            placeholder="Enter your email (e.g. abcd@efg.com)"
-          />
-        </div>
-        <div>
-          <label for="input__phone">Phone Number</label>
-          <input
-            id="input__phone"
-            type="tel" 
-            placeholder="Enter your phone number (e.g. 42424242)"
-          />
-        </div>
-          <div>
-            <label for="select-hotspot">Hotspot *</label>
-            <select id="select">
-              <optgroup label="Option Group">
-                <option>Copenhagen</option>
-                <option>Aarus</option>
-                <option>Odense</option>
-              </optgroup>
-            </select>
-          </div>
-          <div>
-            <label for="select-number">Number of Me-Movers *</label>
-            <select id="select">
-              <optgroup label="Option Group">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-              </optgroup>
-            </select>
-          </div>
-          <div>
-            <label for="idd">Date *</label>
-            <input type="date" required id="idd" value="2021-01-03" />
-          </div>
-          <div>
-            <label for="idd">Time *</label>
-            <input type="time" required id="idd" value="00:00" />
-          </div>
-          <div>
-          <label for="textarea">ADDITIONAL INFORMATION</label>
-            <textarea
-              id="textarea"
-              rows="8"
-              cols="42"
-              placeholder="Enter to comment additional information on special needs or anything you want to share with us."
-            ></textarea>
-          </div>
+          <h5>Try Me-Mover</h5>
+          <h6>
+            Fill out this form if you want to try a Me-over and we will contact
+            you later.
+          </h6>
+          <form name="Me-Mover-form" method="POST" data-netlify="true">
+            <div id="gaps">
+              <div>
+                <label for="input__text">Name *</label>
+                <input
+                  id="input__text"
+                  type="text"
+                  required
+                  placeholder="Enter your first and last name"
+                />
+              </div>
+              <div>
+                <label for="input__emailaddress">Email Address *</label>
+                <input
+                  id="input__emailaddress"
+                  type="email"
+                  required
+                  placeholder="Enter your email (e.g. abcd@efg.com)"
+                />
+              </div>
+              <div>
+                <label for="input__phone">Phone Number</label>
+                <input
+                  id="input__phone"
+                  type="tel"
+                  placeholder="Enter your phone number (e.g. 42424242)"
+                />
+              </div>
+              <div>
+                <label for="select-hotspot">Hotspot *</label>
+                <select id="select">
+                  <optgroup label="Option Group">
+                    <option>Copenhagen</option>
+                    <option>Aarus</option>
+                    <option>Odense</option>
+                  </optgroup>
+                </select>
+              </div>
+              <div>
+                <label for="select-number">Number of Me-Movers *</label>
+                <select id="select">
+                  <optgroup label="Option Group">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                  </optgroup>
+                </select>
+              </div>
+              <div>
+                <label for="idd">Date *</label>
+                <input type="date" required id="idd" value="2021-01-03" />
+              </div>
+              <div>
+                <label for="idd">Time *</label>
+                <input type="time" required id="idd" value="00:00" />
+              </div>
+              <div>
+                <label for="textarea">ADDITIONAL INFORMATION</label>
+                <textarea
+                  id="textarea"
+                  rows="8"
+                  cols="42"
+                  placeholder="Enter to comment additional information on special needs or anything you want to share with us."
+                ></textarea>
+              </div>
+            </div>
+            <div class="inputfeild">
+              <input type="submit" value="submit" class="submit_btn" />
+            </div>
+          </form>
         </section>
       </article>
-          <div class="inputfeild">
-            <input type="submit" value="submit" class="submit_btn">
-          </div>
-        </form>
-          </section>
-        </article>
-
-
-
 
       <article id="shop_bg">
         <section>
-          <a href="https://me-mover.dk/product-category/shop/"
-          target="_blank"><button id="shop_btn">Shop</button></a
+          <a href="https://me-mover.dk/product-category/shop/" target="_blank"
+            ><button id="shop_btn">Shop</button></a
           >
         </section>
       </article>
